--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "serialize-javascript": ">=2.1.1",
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "crypto-js": "^3.1.9-1",
